--- a/CredentialsValidation.Web/Views/Home/Index.cshtml
+++ b/CredentialsValidation.Web/Views/Home/Index.cshtml
@@ -2,7 +2,39 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div>
+    <h1 class="display-4">Welcome!</h1>
+
+    <div class="row justify-content-center">
+        <div class="col-6">
+            <div class="card">
+                <div class="card-header">
+                    Credentials
+                </div>
+                <div class="card-body">
+                    <div class="row justify-content-center mb-3">
+                        <div class="col-2">
+                            <label for="inputEmail3" class="col-form-label">Email</label>
+                        </div>
+                        <div class="col-6">
+                            <input type="email" class="form-control" id="txt_Email" placeholder="name@example.com">
+                        </div>
+                    </div>
+                    <div class="row justify-content-center mb-3">
+                        <div class="col-2">
+                            <label for="inputPassword3" class="col-form-label">Password</label>
+                        </div>
+                        <div class="col-6">
+                            <input type="password" class="form-control" id="txt_Password" placeholder="password">
+                        </div>
+                    </div>
+                    <div class="row justify-content-center mb-3">
+                        <div class="col-2 justify-content-center">
+                            <button id="btn_Validate" class="btn btn-primary">Validate</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
