--- a/CredentialsValidation.Web/Views/Home/Index.cshtml
+++ b/CredentialsValidation.Web/Views/Home/Index.cshtml
@@ -113,7 +113,7 @@
             <div class="col-6">
                 <div class="card">
                     <div class="card-header">
-                        Credentials
+                        Enter Credentials
                     </div>
                     <div class="card-body">
                         <div class="row justify-content-center mb-3">
@@ -134,7 +134,7 @@
                         </div>
                         <div class="row justify-content-center mb-3">
                             <div class="col-2 justify-content-center">
-                                <button type="button" id="btn_Validate" class="btn btn-primary">Validate</button><br />
+                                <button type="button" id="btn_Validate" class="btn btn-primary">Register</button><br />
                                 <div id="divSpinner" style="display:none" class="spinner-border text-primary" role="status"></div>
                             </div>
                         </div>
